--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
   font-family: "Source Sans Pro", "Helvetica", sans-serif;
   font-size: 13pt;
   margin: 10vh 10em;
+  /* want responsive margin and no min-width, but it messes up the scatterplot table */
+  /*margin: 10vh 20vw;*/
   min-width: 1000px;
   /*max-width: 1200px;*/
 }
@@ -27,7 +29,7 @@ img#avatar {
 }
 
 #nav a {
-  display: inline-block;
+  display: block;
   padding: 0vw 20px;
 }
 
